<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">For The Oil</string>

    <!-- ==== General ==== -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <!-- ==== Login Screen ==== -->
    <string name="login_title">Connection</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="login_button_text">Connect</string>
    <string name="auto_login_text">Auto Login</string>


    <!-- ==== Registration Screen ==== -->
    <string name="register_title">Sign up</string>
    <string name="register_username_hint">Username</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_auto_login">Sign in automatically</string>
    <string name="register_button">Register</string>
    <string name="show_password">Show</string>
</resources>
