<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:layout_below="@id/loginMessage"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginEmail"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingEnd="48dp" />

        <ImageButton
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_view"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/show_password"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="togglePasswordClicked"
            android:padding="8dp" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login_text"
        android:textColor="@android:color/black"
        android:layout_below="@id/password_box"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_below="@id/autoLogin"
        android:onClick="login"
        android:layout_marginTop="24dp"/>
</RelativeLayout>
